--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,9 @@
         </div>
       </section>
     </main>
+    <template>
+      <br class="my-2 p-4 w-full overflow-hidden lg:w-1/2 bg-white rounded-lg shadow-sm text-xl text-gray-900 font-bold capitalize mb-2 text-gray-800 leading-7">
+    </template>
     <script src="../assets/libs/script/app.js"></script>
   </body>
 </html>
